      startup5.asm.
   -  pushd: no opsize prefix generated in 16-bit code; see pushwd.asm.
   -  pushw: memory operands were rejected; see pushwd.asm.
   -  regression in v2.19: option -Sg without option -Fl caused a GPF.
   -  string literals used as record field initializers gave error 'constant
      expected'; see record6.asm.

   Other changes:
   -  sample Win32_5 updated in manual.html.
   -  OPTION CODEVIEW got another switch, to suppress line number generation
      for segments that don't have class 'CODE'.
   -  option -pe: IAT entry generation now triggered by EXTERNDEF, not
      by INVOKE; see pe13.asm, pe14.asm.
   -  new option -Zli, format pe only: generates thunks to call import
      addresses in the IAT; see pezli.asm.
   -  Open Watcom DOS32 target: added check in C startup code for DOS extender
      presence.
   -  record initializer literals now accepted in expressions; see record5.asm.

   24.01.2025, v2.19:

   Bugfixes:
   -  format mz: stack segment was never written - a fault if it isn't
      located at the end of the binary; see stack1.asm.
   -  format mz,pe: start offset for first segment may have resulted in
      an invalid binary; see org1.asm & org2.asm.
   -  fastcall 32-bit (MS style): registers may have hold float arguments.
   -  no 'implicit far jmp/call to near label' error in pass one; see
      group7.asm.
   -  option -D: accept white spaces if option is enclosed in double quotes
      ( Masm compatible ).
   -  subtraction of 2 labels may have caused error "constant value too large";
      see minus1.asm.
   -  if .model wasn't flat, but segments with flat attribute existed, they
      may not have been listed in symbol table.
   -  regression in v2.05-v2.18, DUP operator: if an undefined symbol was
      contained in first operand, error message may have been omitted; see
      struct43.asm.
   -  local labels were accepted by PUBLIC directive without -Zm being set;
      see public3.asm.